force-app/main/default/objects/IntegrationDefinition__mdt/IntegrationDefinition__mdt.object-meta.xml
<CustomObject>
    <label>Integration Definition</label>
    <pluralLabel>Integration Definitions</pluralLabel>
</CustomObject>