force-app/main/default/objects/IntegrationDefinition__mdt/fields/IdempotencyEnabled__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Idempotency Enabled</label>
    <type>Checkbox</type>
</CustomField>