force-app/main/default/objects/IntegrationDefinition__mdt/fields/IdempotencyHeader__c.field-meta.xml
<CustomField>
    <fullName>IdempotencyHeader__c</fullName>
    <label>Idempotency Header</label>
    <length>120</length>
    <type>Text</type>
</CustomField>