force-app/main/default/objects/IntegrationDefinition__mdt/fields/LogRequestBody__c.field-meta.xml
<CustomField>
    <fullName>LogRequestBody__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Request Body</label>
    <type>Checkbox</type>
</CustomField>