force-app/main/default/objects/IntegrationDefinition__mdt/fields/LogResponseBody__c.field-meta.xml
<CustomField>
    <fullName>LogResponseBody__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Response Body</label>
    <type>Checkbox</type>
</CustomField>