force-app/main/default/objects/IntegrationDefinition__mdt/fields/MaxPayloadChars__c.field-meta.xml
<CustomField>
    <fullName>MaxPayloadChars__c</fullName>
    <defaultValue>12000</defaultValue>
    <label>Max Payload Characters</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>