force-app/main/default/objects/IntegrationDefinition__mdt/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Max Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>