force-app/main/default/objects/IntegrationDefinition__mdt/fields/ProcessingLeaseSeconds__c.field-meta.xml
<CustomField>
    <fullName>ProcessingLeaseSeconds__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Processing Lease (seconds)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>