force-app/main/default/objects/IntegrationDefinition__mdt/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>