force-app/main/default/objects/IntegrationDefinition__mdt/fields/RetryableStatusCodes__c.field-meta.xml
<CustomField>
    <fullName>RetryableStatusCodes__c</fullName>
    <label>Retryable HTTP Status Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>