force-app/main/default/objects/IntegrationDefinition__mdt/fields/RetryBaseDelaySeconds__c.field-meta.xml
<CustomField>
    <fullName>RetryBaseDelaySeconds__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Retry Base Delay (seconds)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>