force-app/main/default/objects/IntegrationDefinition__mdt/fields/RetryEnabled__c.field-meta.xml
<CustomField>
    <fullName>RetryEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Retry Enabled</label>
    <type>Checkbox</type>
</CustomField>