force-app/main/default/objects/IntegrationDefinition__mdt/fields/TimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>TimeoutMs__c</fullName>
    <defaultValue>30000</defaultValue>
    <label>Timeout (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>